deployment/wipp-ci-single-node/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: wipp-backend-keycloak
  name: wipp-backend-keycloak
spec:
  selector:
    matchLabels:
      app: wipp-backend-keycloak
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wipp-backend-keycloak
    spec:
      serviceAccountName: wipp-backend-keycloak-sa
      containers:
      - image: WIPP_BACKEND_IMAGE
        name: wipp-backend-keycloak
        args: ["mongodb", "27017", "wippdata-keycloak-pvc"]
        volumeMounts:
        - mountPath: /data/WIPP-plugins
          name: data
        ports:
        - containerPort: 8080
        resources: {}
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: wippdata-keycloak-pvc
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
status: {}
