deployment/wipp-ci-single-node/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: wipp-frontend-keycloak
  name: wipp-frontend-keycloak
spec:
  selector:
    matchLabels:
      app: wipp-frontend-keycloak
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wipp-frontend-keycloak
    spec:
      containers:
      - image: WIPP_FRONTEND_IMAGE
        name: wipp-frontend-keycloak
        args: ["wipp-backend-keycloak", "8080"]
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      imagePullSecrets:
      - name: regcred
status: {}
