deployment/wipp-ci-single-node/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - image: mongo:3.6
        name: mongodb
        volumeMounts:
        - mountPath: /data/db
          name: dbdata
        ports:
        - containerPort: 27017
        resources: {}
      volumes:
      - name: dbdata
        hostPath:
          path: /data/WIPP-mongo
          type: Directory
      restartPolicy: Always
status: {}
