deployment/wipp-ci-single-node/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    service: wipp-frontend
  name: wipp-frontend
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30101
  - name: https
    port: 443
    protocol: TCP
    targetPort: 80
  selector:
    app: wipp-frontend
