deployment/wipp-ci-single-node/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mongodb
  name: mongodb
spec:
  ports:
  - name: "27017"
    port: 27017
    protocol: TCP
  selector:
    app: mongodb
status:
  loadBalancer: {}
