deployment/wipp-ci-single-node/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: postgres
  name: postgres
spec:
  ports:
  - name: "5432"
    port: 5432
    protocol: TCP
  selector:
    app: postgres
