deployment/wipp-ci-single-node/tensorboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    service: wipp-tensorboard
  name: wipp-tensorboard
spec:
  type: NodePort
  ports:
  - name: http
    port: 6006
    targetPort: 6006
  selector:
    app: wipp-tensorboard
status:
  loadBalancer: {}
