deployment/wipp-ci-single-node/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - argo.wipp-ci.nist.gov
      secretName: wipp-ci-tls  
  rules:
  - host: argo.wipp-ci.nist.gov
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port: 
              number: 2746
