deployment/wipp-ci-single-node/argo-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - ARGO_HOSTNAME_VALUE
      secretName: WIPP_TLS_SECRET 
  rules:
  - host: ARGO_HOSTNAME_VALUE
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port: 
              number: 2746
