deployment/wipp-ci-single-node/wipp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wipp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
      - WIPP_HOSTNAME_VALUE
      secretName: WIPP_TLS_SECRET
  rules:
  - host: WIPP_HOSTNAME_VALUE
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: wipp-frontend
            port: 
              number: 80
